syntax = "proto3";

package api.v1.file;

option go_package = "github.com/asjard/examples/protobuf/api/filepb";

import "github.com/asjard/protobuf/http.proto";
import "google/protobuf/empty.proto";

service File {
    option (asjard.api.serviceHttp) = {
        group : "examples/file"
    };
    // 文件上传
    rpc Upload(UploadReq) returns (UploadResp) {
        option (asjard.api.http) = {
            post : "/upload"
        };
    };

    // 文件下载
    rpc Download(DownloadReq) returns (google.protobuf.Empty) {
        option (asjard.api.http) = {
            get : "/download"
        };
    };
}

// 上传请求
message UploadReq { string file = 1; }

// 上传返回
message UploadResp { string download_name = 2; }

// 下载请求
message DownloadReq { string file_name = 2; }
